add more command jobtypes and set host input/output file

--- a/batchd/DevOps/scaleway/test/deploy/config/hosts/detachmentsoft.yaml
+++ b/batchd/DevOps/scaleway/test/deploy/config/hosts/detachmentsoft.yaml
@@ -4,5 +4,5 @@ port: 22
 user_name: chenjf
 # public_key: /etc/batchd/keys/id_rsa.pub
 # private_key: /etc/batchd/keys/id_rsa
-# input_directory: /var/batchd/data/input
-# output_directory: /var/batchd/data/output
+input_directory: /var/batchd/data/input
+output_directory: /var/batchd/data/output
